fix: align text to left

--- a/src/features/Sights/MovieCarousel/MovieCarousel.module.scss
+++ b/src/features/Sights/MovieCarousel/MovieCarousel.module.scss
@@ -28,9 +28,11 @@
     font-weight: 500;
     font-size: 64px;
     line-height: 92px;
+    text-align: left;
 }
 
 .description {
+    text-align: left;
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 300;
